<resources>
    <string name="app_name">Calculator</string>
    <string name="TextResult">xyu</string>
    <string name="ConditionText">Xyu</string>
    <string name="ZeroText">0</string>
    <string name="OneText">1</string>
    <string name="TwoText">2</string>
    <string name="ThreeText">3</string>
    <string name="FourText">4</string>
    <string name="FiveText">5</string>
    <string name="SixText">6</string>
    <string name="SevenText">7</string>
    <string name="EightText">8</string>
    <string name="NineText">9</string>
    <string name="MinusText">-</string>
    <string name="PlusText">+</string>
    <string name="PointText">.</string>
    <string name="EquallyText">=</string>
    <string name="ResetText">C</string>
    <string name="MultipleText">*</string>
    <string name="ClearText">←</string>
    <string name="PercentText">%</string>
    <string name="DivideText">/</string>
    <string name="ThreeZeroText">000</string>
</resources>
